--- a/index.html
+++ b/index.html
@@ -1,9 +1,67 @@
+
+<!doctype html>
 <html>
-<head>
-	<meta charset="UTF-8">
-	<title>Sam Rose</title>
+<head><meta charset="utf-8">
+  <title>Sam Rose</title>
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,200,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
+
+  <script type="text/javascript" src="js/jquery.js"></script>
+  <script type="text/javascript" src="js/t.js"></script>
+  <script type="text/javascript">
+        /*<![CDATA[*/
+        $(document).ready(function () {
+              $(function(){
+                $('#t').t({speed:40,speed_vary:true,blink:false,
+                  typing:function(elem,chars_total,chars_left,_char){
+                    // if(_char=='*')foo();
+                  },
+              });
+            });
+          });
+          /*]]>*/
+  </script>
+<link rel="stylesheet" href="css/m.css">
+<link rel="stylesheet" href="css/h.css">
 </head>
 <body>
-	<center><h1>Sam Rose</h1></center>
-</body>
+
+<article id="t">
+    <pre>
+<span class="line-comment">
+&#60;?php
+
+/********************************************
+*  Sam Rose - Web Developer and UX Designer *
+********************************************/
+</span>
+
+<span class="line-comment">require_once 'life.php';</span>
+
+<span class="keyword">function</span> menu(<span class="operator">about</span>, <span class="operator">projects</span>, <span class="operator">contact</span>){
+
+    <span class="line-comment">//About</span>
+    <span class="typ">$about</span> = "Hello, My name is Sam Rose.";
+    <span class="typ">$work</span>  = "I'm a Web Developer and UX Designer based out of Los Angeles, California.";
+
+    <span class="line-comment">//Projects</span>
+    <span class="str">$first</span>  = "<a href="#">Jade Jackson</a>";
+    <span class="str">$second</span> = "<a href="#">CalArts 2015 Art Festival</a>";
+    <span class="str">$third</span>  = "<a href="#">CalArts 2015 Digital Art Festival</a>";
+    <span class="str">$fourth</span> = "<a href="#">Absolute Desert Care</a>";
+
+    <span class="line-comment">//Contact</span>
+    <span class="keyword">if</span>(<span class="str">$hasEmail</span> == <span class="lit">true</span>){
+        <span class="operator">echo</span> "<span class="keyword">xspence&#64;me&#46;com</span>"; }
+    <span class="keyword">else</span> {
+        <a href="mail.google.com">visitGmailToGetAnEmail();</a>
+    }
+}
+
+
+?&#62;
+
+</pre>
+</article>
+<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </html>
