--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head><meta charset="utf-8">
   <title>Sam Rose</title>
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,200,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
+  <link rel="stylesheet" href="css/n.css">
 
-  <script type="text/javascript" src="js/jquery.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
   <script type="text/javascript" src="js/t.js"></script>
   <script type="text/javascript">
         /*<![CDATA[*/
         $(document).ready(function () {
               $(function(){
-                $('#t').t({speed:40,speed_vary:true,blink:false,
+                $('#t').t({speed:20,speed_vary:true,blink:false,
                   typing:function(elem,chars_total,chars_left,_char){
                     // if(_char=='*')foo();
                   },
@@ -54,7 +54,7 @@
     <span class="keyword">if</span>(<span class="str">$hasEmail</span> == <span class="lit">true</span>){
         <span class="operator">echo</span> "<span class="keyword">xspence&#64;me&#46;com</span>"; }
     <span class="keyword">else</span> {
-        <a href="mail.google.com">visitGmailToGetAnEmail();</a>
+        <a href="https://accounts.google.com/signup">getAnEmail(seriously);</a>
     }
 }
 
@@ -63,5 +63,4 @@
 
 </pre>
 </article>
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </html>
