--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head><meta charset="utf-8">
   <title>Sam Rose</title>
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,200,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/m.m.css">
+  <link rel="stylesheet" href="css/m.css">
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
   <script type="text/javascript" src="js/t.js"></script>
   <script type="text/javascript">$(document).ready(function(){$(function(){$("#t").t({speed:10,speed_vary:!0,blink:!1,typing:function(n,t,e,i){}})})});</script>
