added bgs n color plus nav

--- a/index.html
+++ b/index.html
@@ -6,14 +6,26 @@
   <meta http-equiv='X-UA-Compatible' content='ie=edge'>
   <link href="https://fonts.googleapis.com/css?family=Supermercado+One|VT323" rel="stylesheet">
   <link rel='stylesheet' href='css/style.css'>
-  <title>LETS CODE</title>
+  <title>samsrose.github.io</title>
 </head>
 <body>
   <header>
-
+      <h1>Sam Rose</h1>
+      <ul>
+        <li><a href="about/index.html">about</a></li>
+        <li><a href="contact/index.html">contact</a></li>
+        <li><a href="portfolio/index.html">portfolio</a></li>
+      </ul>
   </header>
   <main>
-    <img src="img/1.jpg" alt="">
+    <section>
+      <div class="page_title">
+      
+      </div>
+      <div class="page_body">
+      
+      </div>
+    </section>
   </main>
 </body>
 </html>
