--- a/index.html
+++ b/index.html
@@ -1,106 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>UCD Bootcamp - Samuel Rose</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      border: 0;
-      overflow-x: hidden;
-      background-color: #000;
-    }
-    header {
-      height: 15vh;
-      width: 100vw;
-      padding: 0;
-      margin: 0;
-      box-sizing: border-box;
-      border: 3px solid #fff;
-      overflow-x: hidden;
-      border-top: 5px #000 solid;
-      border-bottom: 5px #000 solid;
-    }
-    header h1, 
-    header h2 {
-      text-align: center;
-      color: #fff;
-    }
-    .container {
-      display:block;
-    }
-    .left, 
-    .right {
-      display: inline-block;
-      list-style-type: none;
-      width: 50%;
-    }
-    .left {
-      float: left;
-      width: 50%;
-      height: 100vh;
-      background-color: rgb(211, 16, 16);
-    }
-    .right {
-      float: right;
-      width: 50%;
-      height: 100vh;
-      background-color: rgb(255, 208, 0);
-    }
-    ul, ul li {
-      list-style-type: none;
-      list-style: none;
-      /* margin: 0; */
-      padding: 0;
-    }
-    a {
-      color: #000;
-      text-decoration: none;
-      padding: 10px;
-      border: 3px solid black;
-      /* line-height: 1.2; */
-    }
-    a:hover {
-      color:#fff;
-      text-decoration: none;
-      padding: 10px;
-      border: 3px solid red;
-      /* line-height: 1.2; */
-      transition: 0.5s all ease-in-out;
-    }
-    li {
-      text-align: center;
-      margin: 15vh;
-    }
-  </style>
+  <meta charset='UTF-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <meta http-equiv='X-UA-Compatible' content='ie=edge'>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' />
+  <link rel='stylesheet' href='assets/css/style.css'>
+  <title>SAM ROSE</title>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>UCD Bootcamp</h1>
-      <h2>Samuel Rose</h2>
-    </header>
-    <main>
-      <div class="left">
-        <ul>
-          <li><a href="#/homework00">Home Work 01</a></li>
-          <li><a href="#/homework00">Home Work 02</a></li>
-          <li><a href="#/homework00">Home Work 03</a></li>
-          <li><a href="#/homework00">Home Work 04</a></li>
-          <li><a href="#/homework00">Home Work 05</a></li>
-        </ul>
+  <header>
+    <h1>
+      <a class="link link--anim" href="../">Sam Rose</a>
+    </h1>
+    <ul>
+      <li>
+
+        <a class="link link--anim" href="../about/index.html">
+          <i class="fa fa-"></i>about</a>
+      </li>
+      </i>
+      <a class="link link--anim" href="../portfolio/index.html">
+        <i class="fa fa-">portfolio</a>
+      </li>
+      <li>
+        <a class="link link--anim" href="../contact/index.html">
+          <i class="fa fa-"></i>contact</a>
+      </li>
+      <li>
+
+    </ul>
+  </header>
+  <main id="a">
+    <section>
+      <div class="page_title">
+        Home Page
       </div>
-      <div class="right">
-        <li><a href="#classwork00">Class Work 01</a></li>
-        <li><a href="#classwork00">Class Work 02</a></li>
-        <li><a href="#classwork00">Class Work 03</a></li>
-        <li><a href="#classwork00">Class Work 04</a></li>
-        <li><a href="#classwork00">Class Work 05</a></li>
+      <div class="page_body">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam repellat, possimus fuga, exercitationem eveniet saepe nemo
+          esse modi voluptatem molestias unde. Molestias odio modi est illo nostrum, sunt adipisci quos.
+        </p>
       </div>
-    </main>
-  </div>
+    </section>
+  </main>
+  <footer>
+    <div id="social">
+      <a href="#">
+        <i class="fa fa-facebook"></i>
+      </a>
+      <a href="#">
+        <i class="fa fa-github"></i>
+      </a>
+      <a href="#">
+        <i class="fa fa-linkedin"></i>
+      </a>
+    </div>
+  </footer>
 </body>
+
 </html>
