--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <head>
-<title>Index Page</title>
+<title>Check Back Shortly.</title>
+  <style type="text/css">
+    body {margin:0;padding:0;background:url(./brb.gif) no-repeat; background-size:cover;height:100vh;width:100vw;overflow:hidden;}
+    h1{position:relative;margin:5% auto;font-size:2em;text-align:center;padding:15px 10px; border: 3px solid #333;background-color:#555; border-radius: 5px;}
+  </style>
 </head>
 <body>
-<h1 style="font-size:2em;text-align:center">Index Page</h1>
+<h1>Page under construction...Check back later.</h1>
 </body>
 </html>
