--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <head>
 <title>Check Back Shortly.</title>
   <style type="text/css">
-    body {margin:0;padding:0;background:url(./brb.gif) no-repeat; background-size:cover;height:100vh;width:100vw;overflow:hidden;}
-    h1{position:relative;margin:5% auto;font-size:2em;text-align:center;padding:15px 10px; border: 3px solid #333;background-color:#555; border-radius: 5px;}
+    body {margin:0;padding:0;height:100vh;width:100vw;overflow:hidden;}
+    h1{position:relative;margin:5% auto;font-size:2em;text-align:center;color:#fff;padding:15px 10px; border: 2px solid #eee;background-color:#ddd; border-radius: 5px;}
+    div#brb{position:absolute;left:0;top:0;right:0;bottom:0;height:100vh;width:100vw;z-index:-999;background:url("brb.gif")}
   </style>
 </head>
 <body>
-<h1>Page under construction...Check back later.</h1>
+  <div id="brb">
+  <h1>Page under construction...Check back later.</h1>
+  </div>
 </body>
 </html>
