--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     background-color: #999;
     border-radius: 2px;
     width: 40vw;
-    outline: 2px solid #888;}
+    outline: 2px solid #888;
+    }
     div#brb{
       position:absolute;
       left:0;
@@ -22,6 +23,8 @@
       right:0;
       bottom:0;
       height:100vh;
+      background-repeat:no-repeat;
+      background-size: cover;
       width:100vw;
       z-index:-999;
       background:url("brb.gif")}
